# rust-http-server

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/controllers/: fragments_controller.rs  healthcheck_controller.rs  layouts_controller.rs  mod.rs  pages_controller.rs
src/data/: branches.json  fragments.json
src/db/: db.rs
src/handlers/: fragments_handler.rs  mod.rs
src/mappers/: fragments_mapper.rs  mod.rs
src/models/: application.rs  fragment.rs  mod.rs  version.rs
src/traits/: db_item.rs  mod.rs
